<resources>
  <string name="locale">en</string>
  <string name="app_name">Wasuramoti</string>
  <string name="developer_mail_addr">pjmtdw@gmail.com</string>
  <string name="error_ioerror">Error: %s. Try again after deleting unnecessary files/apps. Please contact us if this occurs frequently.</string>
  <string name="button_ok">OK</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_add">Add</string>
  <string name="button_help">Help</string>
  <string name="button_config">Config</string>
  <string name="button_test">Test</string>
  <string name="button_config_lang">Language</string>
  <string name="now_playing">Playing</string>
  <string name="now_auto_playing">Auto Playing</string>
  <string name="now_auto_playing_stop">Auto: %d min left</string>
  <string name="now_stopped">Stopped</string>
  <string name="now_stopped_auto">Stopped: %d sec</string>
  <string name="now_searching">Searching</string>
  <string name="menu_settings">Menu</string>
  <string name="menu_shuffle">Shuffle</string>
  <string name="menu_shuffle_confirm">Really shuffle and restart from beginning?</string>
  <string name="menu_move">Move / Search</string>
  <string name="menu_timer">Timer</string>
  <string name="menu_play_history">History</string>
  <string name="menu_quick_conf">Quick Config</string>
  <string name="menu_conf">Advanced Config</string>
  <string-array name="quick_conf_list">
    <item>@string/quick_conf_hide</item>
    <item>@string/quick_conf_full</item>
    <item>@string/quick_conf_nagashi</item>
    <item>@string/quick_conf_only_first</item>
    <item>@string/quick_conf_english</item>
    <item>@string/quick_conf_intended_use</item>
  </string-array>
  <string name="quick_conf_hide">Hide Poem Text</string>
  <string name="quick_conf_full">Full Poem Text</string>
  <string name="quick_conf_nagashi">Fuda Nagashi</string>
  <string name="quick_conf_only_first">Only 1st Half</string>
  <string name="quick_conf_only_second">Only 2nd Half</string>
  <string name="quick_conf_english">Translation</string>
  <string name="quick_conf_intended_use">Change Intended Use</string>
  <string name="quicklang_title">Default Language</string>
  <string name="conf_unit_minute">&#160;min</string>
  <string name="conf_unit_second">&#160;sec</string>
  <string name="message_enabled">Enabled</string>
  <string name="message_disabled">Disabled</string>
  <string name="category_global">Global</string>
  <string name="conf_fudaset_title">Set of Poem</string>
  <string name="conf_fudaset_summary">Which subset of poems to play.</string>
  <string name="karafuda_enable">Enable</string>
  <string name="karafuda_unit"></string>
  <string name="karafuda_append_num">No. of Karafuda:</string>
  <string name="karafuda_urafuda_prob_left">&lt;= Random</string>
  <string name="karafuda_urafuda_prob_right">Prefer Urafuda =&gt;</string>
  <string name="conf_karafuda">Add Karafuda</string>
  <string name="conf_karafuda_summary">In addition to poem set, play some poems randomly.</string>
  <string name="conf_read_order_title">Play Order</string>
  <string name="conf_read_order_summary">How to play throughout all the poems.</string>
  <string name="conf_read_order_desc">Joka is disabled in random mode.</string>
  <string-array name="conf_read_order_entries">
    <item>SHUFFLE|Shuffle|Read one by one from random deck. Same poem would not be read twice.</item>
    <item>RANDOM|Random|Choose one poem from random deck, read it, and give it back to the deck.</item>
    <item>POEM_NUM|Sequential|Read through 1 to 100.</item>
    <item>MUSUMEFUSAHOSE|Musume|Read in Mu Su Me Fu Sa Ho Se U Tsu Shi Mo Yu ... order</item>
  </string-array>
  <string name="conf_equalizer">Equalizer</string>
  <string name="conf_equalizer_summary">Set volume for each frequency range.</string>
  <string name="audio_play">Play</string>
  <string name="audio_stop">Stop</string>
  <string name="equalizer_reset">Reset</string>
  <string name="player_error_noplay">Cannot play current poem. Please go back to previous poem.</string>
  <string name="equalizer_error_notsupported">Equalizer is not supported in this device.</string>
  <string name="equalizer_not_available_in_opensles">Equalizer is not supported in OpenSL ES mode.</string>
  <string name="category_order">Order</string>
  <string name="conf_show_yomi_info_title">Show Poem Text</string>
  <string name="conf_show_yomi_info_summary">Show current poem text on the screen.</string>
  <string name="yomi_info_conf_lang_title">Language of Poem Text</string>
  <string name="yomi_info_conf_font_title">Poem Text Font</string>
  <string name="yomi_info_show_text_desc">Show Poem Text</string>
  <string name="yomi_info_japanese_desc">Poem Text:</string>
  <string name="yomi_info_furigana_desc">Furigana:</string>
  <string name="yomi_info_torifuda_desc">Torifuda:</string>
  <string name="yomi_info_torifuda_mode_desc">Type:</string>
  <string-array name="yomi_info_mode">
    <item>Yomifuda</item>
    <item>Torifuda</item>
  </string-array>
  <string name="yomi_info_display_desc">Display:</string>
  <string name="yomi_info_author_desc">Author</string>
  <string name="yomi_info_furigana_show_desc">Furigana</string>
  <string name="yomi_info_kami_desc">1st</string>
  <string name="yomi_info_simo_desc">2nd</string>
  <string name="yomi_info_abbrev_yomifuda">Yomifuda</string>
  <string name="yomi_info_abbrev_torifuda">Torifuda</string>
  <string name="yomi_info_abbrev_romaji">Romaji</string>
  <string name="yomi_info_abbrev_english">English</string>
  <string name="yomi_info_abbrev_none">None</string>
  <string-array name="conf_yomi_info_japanese_fonts">
    <item>Default</item>
    <item>T-Font Regular</item>
    <item>Kouzan Semi-cursive</item>
    <item>Kouzan Cursive</item>
  </string-array>
  <string-array name="conf_yomi_info_japanese_fonts_abbr">
    <item>Default</item>
    <item>Regular</item>
    <item>Semi-cursive</item>
    <item>Cursive</item>
  </string-array>
  <string name="conf_read_order_each_title">Play Order of Each Poem</string>
  <string name="conf_read_order_each_summary">How to play each half of the poem in one section.</string>
  <string name="conf_read_order_joka">How to Play Joka</string>
  <string name="conf_read_order_joka_summary">`Joka` is an introduction poem which is played before all poems.</string>
  <string name="conf_joka_enable">Enable Joka</string>
  <string name="conf_joka_upper_phrase">1st Half (000_1.ogg)</string>
  <string name="conf_joka_lower_phrase">2nd Half (000_2.ogg)</string>
  <string name="conf_num_0">None</string>
  <string name="conf_num_1">Once</string>
  <string name="conf_num_2">Twice</string>
  <string name="conf_joka_caveat">
    Note 1: Joka is disabled in random mode. \n
    Note 2: This config is preserved for each reciters. \n
    Note 3: Actually, there might be a case that both 1st and 2nd half of the poem is included in 000_1.ogg.
  </string>
  <string name="conf_autoplay">Continuous Play</string>
  <string name="conf_autoplay_summary">Start playing next poem when finished.</string>
  <string name="autoplay_enable">Start playing next poem when finished.</string>
  <string name="autoplay_span">Span:</string>
  <string name="conf_reader_list">Reciter</string>
  <string name="conf_reader_list_summary">See `Config`-&gt;`Help` for how to load audio file from internal/external storage.</string>
  <string name="conf_audio_volume">Volume</string>
  <string name="conf_audio_volume_summary">Set audio volume of device when playing.</string>
  <string name="subscreen_others">Other Settings</string>
  <string name="category_time">Time</string>
  <string name="conf_wav_begin_read">Beginning of Play</string>
  <string name="conf_wav_begin_read_summary">Add silence before playing the poem. Raise this value if the voice gets cut off at the beginning.</string>
  <string name="conf_wav_span_simokami">Interval</string>
  <string name="conf_wav_span_simokami_summary">Interval between each half of the poem.</string>
  <string name="conf_dimlock_minutes">Lock Screen</string>
  <string name="conf_dimlock_minutes_summary">How many minutes until lock screen.</string>
  <string name="category_processing">Speech Processing</string>
  <string name="conf_wav_threshold">Threshold</string>
  <string name="conf_wav_threshold_summary">Treat as silence if amplitude is lower than this value.</string>
  <string name="conf_wav_fadeout_simo">Fade Out</string>
  <string name="conf_wav_fadout_simo_summary">How many seconds to fade out.</string>
  <string name="conf_wav_fadein_kami">Fade In</string>
  <string name="conf_wav_fadein_kami_summary">How many seconds to fade in.</string>
  <string name="fudasetedit_name">Title</string>
  <string name="fudasetedit_hint">Title of Poem Set</string>
  <string name="fudasetedit_text_hint">Example: kimi naniwa 21..30</string>
  <string name="button_fudasetedit_list">List</string>
  <string name="button_fudasetedit_initial">Initial</string>
  <string name="button_fudasetedit_num">Number</string>
  <string name="timer_unit">minutes</string>
  <string name="timer_play_sound">Play Sound</string>
  <string name="timer_do_vibrate">Vibrate</string>
  <string name="timer_sound_name">Sound: </string>
  <string name="timer_sound_change">Change</string>
  <string name="timer_sound_test">Test</string>
  <string name="conf_show_credits">Credits</string>
  <string name="conf_show_credits_summary">License of fonts and libraries.</string>
  <string name="category_other">Others</string>
  <string name="conf_bug_report">Support Form</string>
  <string name="conf_bug_report_summary">Send question, give a request, and report bug to developer.</string>
  <string name="intended_use_desc">Select your intended use:</string>
  <string name="intended_use_recreation">Recreative Karuta</string>
  <string name="intended_use_study">Study 100 Poems</string>
  <string name="intended_use_competitive">Competitive Karuta</string>
  <string name="memorization_fudaset_reset">Reset the `Memorized` poems in the fudaset.</string>
  <string name="conf_audio_stream_type">Stream Type</string>
  <string name="conf_audio_stream_type_summary">Also try this option when you cannot play audio. However, if you choose other than `Music`, it may conflict with call app, so take care.</string>
  <string name="conf_caution">
    * CAUTION *
  </string>
  <string name="conf_caution_summary">
    Please press here and read description before editing options below.
  </string>
  <string name="conf_caution_message">
    <![CDATA[
    <div><font color="?attr/cautionMessageColor"><b>Threashold</b></font></div>
    <p>
      This app is cropping the silence from both head and tail of the audio. The signal lower than threashold will be cropped off. It should be less than <tt>0.01</tt> for low noice audio source.
    </p>
    <div><font color="?attr/cautionMessageColor"><b>Fade In/Out</b></font></div>
    <p>
      It is also applying fade in/out after cropping to avoid clatter. The value should be lower than <tt>0.3</tt> seconds.
    </p>
    <div><font color="?attr/cautionMessageColor"><b>OpenSL ES</b></font></div>
    <p>
      We use <tt>AudioTrack</tt> as default sound engine. However, some device may have problem using it. In the case, enable <tt>OpenSL ES</tt> when something goes wrong with the sound. However it should be avoided whenever possible since it is not Android\'s native engine.
    </p>
    <div><font color="?attr/cautionMessageColor"><b>Stream Type</b></font></div>
    <p>
      Android has several stream types, and each has their own volume level. We use <tt>Music</tt> as default, but changing it to something like <tt>Ring</tt> may change some behavior (i.e. plays from speaker even when earphone is plugged).
    </p>
    ]]>
  </string>
  <string name="category_misc">Misc</string>
</resources>