<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/category_global">
    <karuta.hpnpwd.wasuramoti.YomiInfoPreference
      android:key="show_yomi_info"
      android:title="@string/conf_show_yomi_info_title"
      android:summary="@string/conf_show_yomi_info_summary"
      android:widgetLayout="@layout/conf_current_value"
      />
    <karuta.hpnpwd.wasuramoti.FudaSetPreference
      android:key="fudaset"
      android:title="@string/conf_fudaset_title"
      android:summary="@string/conf_fudaset_summary"
      android:widgetLayout="@layout/conf_current_value"
      />
    <karuta.hpnpwd.wasuramoti.KarafudaPreference
      android:key="karafuda"
      android:title="@string/conf_karafuda"
      android:summary="@string/conf_karafuda_summary"
      android:widgetLayout="@layout/conf_current_value"
      />
    <karuta.hpnpwd.wasuramoti.AutoPlayPreference
      android:key="autoplay"
      android:title="@string/conf_autoplay"
      android:summary="@string/conf_autoplay_summary"
      android:widgetLayout="@layout/conf_current_value"
      unit="@string/conf_unit_second"
      />
    <karuta.hpnpwd.wasuramoti.AudioVolumePreference
      android:key="audio_volume"
      android:title="@string/conf_audio_volume"
      android:summary="@string/conf_audio_volume_summary"
      android:widgetLayout="@layout/conf_current_value"
      />
    <karuta.hpnpwd.wasuramoti.ReaderListPreference
      android:key="reader_path"
      android:title="@string/conf_reader_list"
      android:summary="@string/conf_reader_list_summary"
      android:widgetLayout="@layout/conf_current_value"
      />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/category_order" android:key="category_order">
    <karuta.hpnpwd.wasuramoti.ListPreferenceCustom
      android:key="read_order"
      android:title="@string/conf_read_order_title"
      android:summary="@string/conf_read_order_summary"
      android:entries="@array/conf_read_order_entries"
      android:entryValues="@array/conf_read_order_entryValues"
      android:defaultValue="SHUFFLE"
      android:widgetLayout="@layout/conf_current_value"
      />
    <karuta.hpnpwd.wasuramoti.ListPreferenceCustom
      android:key="read_order_each"
      android:title="@string/conf_read_order_each_title"
      android:summary="@string/conf_read_order_each_summary"
      android:entries="@array/conf_read_order_each_entries"
      android:entryValues="@array/conf_read_order_each_entryValues"
      android:defaultValue="CUR2_NEXT1"
      android:widgetLayout="@layout/conf_current_value"
      />
    <karuta.hpnpwd.wasuramoti.JokaOrderPreference
      android:key="read_order_joka"
      android:title="@string/conf_read_order_joka"
      android:summary="@string/conf_read_order_joka_summary"
      android:widgetLayout="@layout/conf_current_value"
      android:defaultValue="upper_1,lower_1"
      />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/category_other">
    <PreferenceScreen
      android:key="conf_others"
      android:title="@string/subscreen_others"
      android:persistent="false"
      android:summary="@string/subscreen_others"
      >
      <PreferenceCategory android:title="@string/category_time">
        <karuta.hpnpwd.wasuramoti.EditTextPreferenceCustom
          android:key="wav_begin_read"
          android:title="@string/conf_wav_begin_read"
          android:summary="@string/conf_wav_begin_read_summary"
          android:numeric="decimal"
          android:defaultValue="0.5"
          android:widgetLayout="@layout/conf_current_value"
          unit="@string/conf_unit_second"
          />
        <karuta.hpnpwd.wasuramoti.EditTextPreferenceCustom
          android:key="wav_span_simokami"
          android:title="@string/conf_wav_span_simokami"
          android:summary="@string/conf_wav_span_simokami_summary"
          android:numeric="decimal"
          android:defaultValue="1.0"
          android:widgetLayout="@layout/conf_current_value"
          unit="@string/conf_unit_second"
          />
        <karuta.hpnpwd.wasuramoti.EditTextPreferenceCustom
          android:key="dimlock_minutes"
          android:title="@string/conf_dimlock_minutes"
          android:summary="@string/conf_dimlock_minutes_summary"
          android:numeric="integer"
          android:defaultValue="5"
          android:widgetLayout="@layout/conf_current_value"
          unit="@string/conf_unit_minute"
          />
      </PreferenceCategory>
      <PreferenceCategory android:title="@string/category_processing">
        <karuta.hpnpwd.wasuramoti.EqualizerPreference
          android:key="effect_equalizer_seq"
          android:title="@string/conf_equalizer"
          android:summary="@string/conf_equalizer_summary"
          />
        <karuta.hpnpwd.wasuramoti.EditTextPreferenceCustom
          android:key="wav_threashold"
          android:title="@string/conf_wav_threshold"
          android:summary="@string/conf_wav_threshold_summary"
          android:numeric="decimal"
          android:defaultValue="0.01"
          android:widgetLayout="@layout/conf_current_value"
          />

        <karuta.hpnpwd.wasuramoti.EditTextPreferenceCustom
          android:key="wav_fadeout_simo"
          android:title="@string/conf_wav_fadeout_simo"
          android:summary="@string/conf_wav_fadout_simo_summary"
          android:numeric="decimal"
          android:defaultValue="0.2"
          android:widgetLayout="@layout/conf_current_value"
          unit="@string/conf_unit_second"
          />
        <karuta.hpnpwd.wasuramoti.EditTextPreferenceCustom
          android:key="wav_fadein_kami"
          android:title="@string/conf_wav_fadein_kami"
          android:summary="@string/conf_wav_fadein_kami_summary"
          android:numeric="decimal"
          android:defaultValue="0.1"
          android:widgetLayout="@layout/conf_current_value"
          unit="@string/conf_unit_second"
          />
      </PreferenceCategory>
      <PreferenceCategory android:title="@string/category_misc">
        <CheckBoxPreference
          android:key="skip_on_longclick"
          android:title="@string/conf_skip_on_longclick"
          android:summary="@string/conf_skip_on_longclick_summary"
          />
        <CheckBoxPreference
          android:key="silent_mode_on_start"
          android:title="@string/conf_silent_mode_on_start"
          android:summary="@string/conf_silent_mode_on_start_summary"
          />
        <CheckBoxPreference
          android:key="hardware_accelerate"
          android:title="@string/conf_hardware_accelerate"
          android:summary="@string/conf_hardware_accelerate_summary"
          android:defaultValue="true"
          />
      </PreferenceCategory>
      <PreferenceCategory android:title="@string/category_init">
        <Preference android:title="@string/conf_init_fudaset" android:summary="@string/conf_init_fudaset_summary" android:key="init_fudaset"/>
        <Preference android:title="@string/conf_init_preference" android:summary="@string/conf_init_preference_summary" android:key="init_preference" />
      </PreferenceCategory>
    </PreferenceScreen>
    <Preference android:title="@string/conf_show_credits" android:summary="@string/conf_show_credits_summary" android:key="show_credits"/>
    <Preference android:title="@string/conf_bug_report" android:summary="@string/conf_bug_report_summary" android:key="bug_report"/>
  </PreferenceCategory>
</PreferenceScreen>
