<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/category_global">
    <!-- without android:key, we get java.lang.ClassCastException: android.support.v7.preference.PreferenceScreen cannot be cast to android.support.v7.preference.DialogPreference -->
        <karuta.hpnpwd.wasuramoti.DescriptionPreference
          android:title="@string/conf_caution"
          android:summary="@string/conf_caution_summary"
          message="@string/conf_caution_message"
          android:key="dummy_conf_caution"
          />
    <karuta.hpnpwd.wasuramoti.ReadOrderPreference
      android:key="read_order"
      android:title="@string/conf_read_order_title"
      android:summary="@string/conf_read_order_summary"
      android:defaultValue="SHUFFLE"
      android:widgetLayout="@layout/conf_current_value"
      />

    <CheckBoxPreference
      android:key="light_theme"
      android:title="@string/conf_light_theme"
      android:summary="@string/conf_light_theme_summary"
      android:defaultValue="false"
      />
      <karuta.hpnpwd.wasuramoti.ListPreferenceCustom
        android:key="audio_stream_type"
        android:title="@string/conf_audio_stream_type"
        android:summary="@string/conf_audio_stream_type_summary"
        android:entries="@array/conf_audio_stream_type_entries"
        android:entryValues="@array/conf_audio_stream_type_entryValues"
        android:defaultValue="MUSIC"
        android:widgetLayout="@layout/conf_current_value"
        />
        <karuta.hpnpwd.wasuramoti.EditTextPreferenceCustom
          android:key="dimlock_minutes"
          android:title="@string/conf_dimlock_minutes"
          android:summary="@string/conf_dimlock_minutes_summary"
          android:numeric="integer"
          android:defaultValue="5"
          android:widgetLayout="@layout/conf_current_value"
          unit="@string/conf_unit_minute"
          />
    <karuta.hpnpwd.wasuramoti.JokaOrderPreference
      android:key="read_order_joka"
      android:title="@string/conf_read_order_joka"
      android:summary="@string/conf_read_order_joka_summary"
      android:widgetLayout="@layout/conf_current_value"
      android:defaultValue="upper_1,lower_1"
      />
    <karuta.hpnpwd.wasuramoti.AutoPlayPreference
      android:key="autoplay"
      android:title="@string/conf_autoplay"
      android:summary="@string/conf_autoplay_summary"
      android:widgetLayout="@layout/conf_current_value"
      unit="@string/conf_unit_second"
      />
  </PreferenceCategory>
</PreferenceScreen>
