<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:wasuramoti="http://schemas.android.com/apk/res-auto"
  >
  <item
    android:id="@+id/action_settings"
    android:icon="?attr/settingsIconDrawable"
    android:title="@string/menu_settings"
    wasuramoti:showAsAction="always">
    <menu>
      <item android:id="@+id/menu_shuffle" android:title="@string/menu_shuffle" android:numericShortcut="1" />
      <item android:id="@+id/menu_move" android:title="@string/menu_move" android:numericShortcut="2" />
      <item android:id="@+id/menu_timer" android:title="@string/menu_timer" android:numericShortcut="3" />
      <item android:id="@+id/menu_play_history" android:title="@string/menu_play_history" android:numericShortcut="4" />
      <item android:id="@+id/menu_quick_conf" android:title="@string/menu_quick_conf" android:numericShortcut="5" />
      <item android:id="@+id/menu_conf" android:title="@string/menu_conf" android:numericShortcut="6" />
    </menu>
  </item>
</menu>
