<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent" android:layout_height="match_parent"
  android:orientation="vertical">

  <!-- layout_weight = 1 is required for always displaying the buttons on the below for small screens -->
  <ScrollView
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_weight="1"
    >
    <LinearLayout
      android:layout_width="match_parent" android:layout_height="wrap_content"
      android:orientation="vertical" >
      <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
          android:layout_width="wrap_content" android:layout_height="wrap_content"
          android:text="@string/fudasetedit_name" />
        <EditText android:id="@+id/fudasetedit_name"
          android:layout_width="match_parent" android:layout_height="wrap_content"
          android:hint="@string/fudasetedit_hint"
          android:singleLine="true" />
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button android:id="@+id/button_fudasetedit_list"
          android:text="@string/button_fudasetedit_list"
          android:layout_height="wrap_content"
          android:layout_width="96sp"
          />
        <Button android:id="@+id/button_fudasetedit_initial"
          android:text="@string/button_fudasetedit_initial"
          android:layout_height="wrap_content"
          android:layout_width="96sp"
          />
        <Button android:id="@+id/button_fudasetedit_num"
          android:text="@string/button_fudasetedit_num"
          android:layout_height="wrap_content"
          android:layout_width="96sp"
          />
      </LinearLayout>
      <karuta.hpnpwd.wasuramoti.PatchedTextView
        android:id="@+id/fudasetedit_help_html"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        />

      <karuta.hpnpwd.wasuramoti.LocalizationEditText android:id="@+id/fudasetedit_text"
        android:layout_width="match_parent" android:layout_height="170sp"
        android:hint="@string/fudasetedit_text_hint"
        android:gravity="top" />
    </LinearLayout>
  </ScrollView> 
</LinearLayout>
