<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content" android:layout_height="wrap_content"
  android:background="?attr/roundBorderDrawable" android:padding="10dp" android:layout_marginTop="10dip"
  android:orientation="vertical"
  android:id="@+id/timer_item"
  >
  <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
    <ImageView
      android:id="@+id/timer_icon"
      android:layout_height="28sp" android:layout_width="28sp"
      android:src="@drawable/baby_tux"
      />
    <EditText
      android:id="@+id/timer_limit"
      android:numeric="decimal"
      android:maxLength="4"
      android:minWidth="36sp"
      android:selectAllOnFocus="true"
      android:layout_height="wrap_content" android:layout_width="wrap_content"
      />
    <TextView
      android:layout_height="wrap_content" android:layout_width="wrap_content"
      android:text="@string/timer_unit"
      />
  </LinearLayout>
  <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
    <CheckBox
      android:id="@+id/timer_play_sound"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:text="@string/timer_play_sound"
      />
    <CheckBox
      android:id="@+id/timer_do_vibrate"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:text="@string/timer_do_vibrate"
      />
  </LinearLayout>
  <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
    >
    <TextView
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:id="@+id/timer_sound_name" android:text="@string/timer_sound_name"
      />
    <TextView
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:id="@+id/timer_sound_uri"
      />
  </LinearLayout>
  <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
    >
    <Button android:layout_width="96sp" android:layout_height="wrap_content"
      android:text="@string/timer_sound_change" android:id="@+id/timer_sound_change"
      android:onClick="onSoundChange"
      />
    <Button android:layout_width="96sp" android:layout_height="wrap_content"
      android:text="@string/timer_sound_test" android:id="@+id/timer_sound_test"
      android:onClick="onSoundTest"
      />
  </LinearLayout>
</LinearLayout>
