<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent" android:layout_height="match_parent"
  android:fillViewport="true" >
<LinearLayout
  android:layout_width="match_parent" android:layout_height="match_parent"
  android:orientation="vertical" >
  <LinearLayout
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <TextView
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:text="@string/fudasetedit_name" />
    <EditText android:id="@+id/memorization_fudaset_name"
      android:layout_width="match_parent" android:layout_height="wrap_content"
      android:hint="@string/fudasetedit_hint"
      android:singleLine="true" />
  </LinearLayout>
  <CheckBox
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:id="@+id/memorization_fudaset_reset"
    android:text="@string/memorization_fudaset_reset"
    android:checked="true"
    />
</LinearLayout>
</ScrollView>
