<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent"
  android:fillViewport="true" >
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" android:layout_height="fill_parent"
              android:orientation="vertical">

    <CheckBox
      android:id="@+id/autoplay_enable"
      android:layout_width="wrap_content" android:layout_height="wrap_content"
      android:text="@string/autoplay_enable"
      android:checked="true"
      />
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView
          android:layout_height="wrap_content" android:layout_width="wrap_content"
          android:text="@string/autoplay_span"
          />
        <EditText
          android:id="@+id/autoplay_span"
          android:numeric="decimal"
          android:maxLength="4"
          android:minWidth="48sp"
          android:selectAllOnFocus="true"
          android:layout_height="wrap_content" android:layout_width="wrap_content"
          />
        <TextView
          android:layout_height="wrap_content" android:layout_width="wrap_content"
          android:text="@string/conf_unit_second"
          />
      </LinearLayout>
    </LinearLayout>
</ScrollView>
